--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "spatie/phpunit-snapshot-assertions": "^1.3"
     },
     "require-dev": {
         "orchestra/testbench": "^3.6",
